atualização nomeclatura pastas dos projetos

--- a/02 - JavaScript_com_Orientacao_Objetos/Exercicios_JavaScript_com_Orientacao_Objetos/MD04_Desenv_Web_Loops_Bibliotecas/bancoNode/package.json
+++ b/02 - JavaScript_com_Orientacao_Objetos/Exercicios_JavaScript_com_Orientacao_Objetos/MD04_Desenv_Web_Loops_Bibliotecas/bancoNode/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "md04_cp02_sequelize",
+  "name": "banconode",
   "version": "1.0.0",
-  "description": "Projeto Sequelize",
-  "main": "ExSequelize.js",
+  "description": "Estudo de caso criacao app Banco ",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
