--- a/02-JavaScript_com_Orientacao_Objetos/Exercicios_JavaScript_com_Orientacao_Objetos/MD04_Desenv_Web_Loops_Bibliotecas/bancoNode (Anterior)/package.json
+++ b/02-JavaScript_com_Orientacao_Objetos/Exercicios_JavaScript_com_Orientacao_Objetos/MD04_Desenv_Web_Loops_Bibliotecas/bancoNode (Anterior)/package.json
@@ -1,17 +1,13 @@
 {
   "name": "banconode",
   "version": "1.0.0",
-  "description": "Estudo de caso de um banco financeiro para a disciplina de JS",
+  "description": "Estudo de caso criacao app Banco ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "Educação"
-  ],
-  "author": "Turma Back FAP manhã",
+  "author": "Luciano Galhardo",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "prompt": "^1.3.0"
   }
