--- a/02-JavaScript_com_Orientacao_Objetos/Exercicios_JavaScript_com_Orientacao_Objetos/MD04_Desenv_Web_Loops_Bibliotecas/Aula_Sequelize/package.json
+++ b/02-JavaScript_com_Orientacao_Objetos/Exercicios_JavaScript_com_Orientacao_Objetos/MD04_Desenv_Web_Loops_Bibliotecas/Aula_Sequelize/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luciano Galhardo",
+  "type": "commonjs",
   "license": "ISC",
   "dependencies": {
     "mysql2": "^3.6.1",
