--- a/03-Padroes_de_Projetos/MD01_Padroes_de_Projetos/package.json
+++ b/03-Padroes_de_Projetos/MD01_Padroes_de_Projetos/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "events": "^3.3.0",
     "prompt": "^1.3.0"
   },
   "devDependencies": {
+    "@types/events": "^3.0.3",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
