--- a/03-Padroes_de_Projetos/MD03_Padroes_de_Projetos/package.json
+++ b/03-Padroes_de_Projetos/MD03_Padroes_de_Projetos/package.json
@@ -12,10 +12,12 @@
   "devDependencies": {
     "@types/node": "^20.9.1",
     "@types/prompt-sync": "^4.2.3",
+    "@types/readline-sync": "^1.4.7",
     "tsx": "^4.1.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "readline-sync": "^1.4.10"
   }
 }
